--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -16,9 +16,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-10 07:22+0200\n"
+"POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: zerowhy . <anymailz@tutanota.com>, 2021\n"
+"Last-Translator: yy0zz, 2021-2023\n"
 "Language-Team: Portuguese (Brazil) (http://app.transifex.com/team-xonotic/"
 "xonotic/language/pt_BR/)\n"
 "Language: pt_BR\n"
@@ -2228,10 +2228,10 @@ msgstr "Granada de véu"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
-msgstr ""
+msgstr "Granada de munição"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
-msgid "Dark grenade"
+msgid "Darkness grenade"
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
