--- a/common.ru.po
+++ b/common.ru.po
@@ -24,9 +24,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-10 07:22+0200\n"
+"POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: Артём Котлубай, 2022\n"
+"Last-Translator: Andrei Stepanov, 2014-2023\n"
 "Language-Team: Russian (http://app.transifex.com/team-xonotic/xonotic/"
 "language/ru/)\n"
 "Language: ru\n"
@@ -2227,10 +2227,10 @@ msgstr "Маскировочная граната"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
-msgstr ""
+msgstr "Боевая граната"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
-msgid "Dark grenade"
+msgid "Darkness grenade"
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
