--- a/common.ms.po
+++ b/common.ms.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-10 07:22+0200\n"
+"POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: 4b0721bd8a44304c1fd21d8581e7aba4_e088d28 "
 "<64a9a0c5da22e761316957ae436b6281_676465>, 2018\n"
@@ -2185,7 +2185,7 @@ msgid "Ammo grenade"
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
-msgid "Dark grenade"
+msgid "Darkness grenade"
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
