--- a/common.nl.po
+++ b/common.nl.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Xonotic\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-10 07:22+0200\n"
+"POT-Creation-Date: 2023-07-11 07:22+0200\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
 "Last-Translator: Jonathan van der Steege <jonakeys@hotmail.com>, 2016,2022\n"
 "Language-Team: Dutch (http://app.transifex.com/team-xonotic/xonotic/language/"
@@ -2195,7 +2195,7 @@ msgid "Ammo grenade"
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
-msgid "Dark grenade"
+msgid "Darkness grenade"
 msgstr ""
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
