--- a/common.pt_BR.po
+++ b/common.pt_BR.po
@@ -2232,7 +2232,7 @@ msgstr "Granada de munição"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
 msgid "Darkness grenade"
-msgstr ""
+msgstr "Granada das sombras"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
 #: qcsrc/menu/xonotic/keybinder.qc:60
