--- a/common.zh_CN.po
+++ b/common.zh_CN.po
@@ -2198,11 +2198,11 @@ msgstr "隐身榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
-msgstr ""
+msgstr "弹药榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
 msgid "Darkness grenade"
-msgstr ""
+msgstr "暗黑榴弹"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
 #: qcsrc/menu/xonotic/keybinder.qc:60
@@ -3160,7 +3160,7 @@ msgstr "^BG%s^BG 失去了%s^BG增益！"
 #: qcsrc/common/notifications/all.inc:703
 #, c-format
 msgid "^BGYou dropped the %s^BG buff!"
-msgstr "^BG你丢掉了%s^BG增益！"
+msgstr "^BG你失去了%s^BG增益！"
 
 #: qcsrc/common/notifications/all.inc:382
 #: qcsrc/common/notifications/all.inc:704
@@ -4599,7 +4599,7 @@ msgid ""
 "^BGAdded ^F4%s^BG to the game!"
 msgstr ""
 "^F2现在是^F4决胜时刻^F2！\n"
-"^BG为游戏添加了 ^F4%s^BG！"
+"^BG为游戏延长了 ^F4%s^BG！"
 
 #: qcsrc/common/notifications/all.inc:760
 msgid "^K1In^BG-portal created"
