--- a/common.zh_HK.po
+++ b/common.zh_HK.po
@@ -2192,11 +2192,11 @@ msgstr "隱身榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:99
 msgid "Ammo grenade"
-msgstr ""
+msgstr "彈藥榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.inc:109
 msgid "Darkness grenade"
-msgstr ""
+msgstr "暗黑榴彈"
 
 #: qcsrc/common/mutators/mutator/nades/nades.qc:139
 #: qcsrc/menu/xonotic/keybinder.qc:60
@@ -3154,7 +3154,7 @@ msgstr "^BG%s^BG 失去了%s^BG增益！"
 #: qcsrc/common/notifications/all.inc:703
 #, c-format
 msgid "^BGYou dropped the %s^BG buff!"
-msgstr "^BG你丟掉了%s^BG增益！"
+msgstr "^BG你失去了%s^BG增益！"
 
 #: qcsrc/common/notifications/all.inc:382
 #: qcsrc/common/notifications/all.inc:704
@@ -4593,7 +4593,7 @@ msgid ""
 "^BGAdded ^F4%s^BG to the game!"
 msgstr ""
 "^F2現在是^F4決勝時刻^F2！\n"
-"^BG為遊戲添加了 ^F4%s^BG！"
+"^BG為遊戲延長了 ^F4%s^BG！"
 
 #: qcsrc/common/notifications/all.inc:760
 msgid "^K1In^BG-portal created"
